--- a/source/sass/molecules/_site-logo.scss
+++ b/source/sass/molecules/_site-logo.scss
@@ -10,57 +10,11 @@
 //                                                                             /
 //=============================================================================/
 
-// <a>
-#mark {
-  display: block;
-  padding: 0.618rem;
-  margin-left: -1.125rem;
-
-  @include breakpoint($tablet) {
-    display: none;
-  }
+// <g>
+.monogram {
+  fill: #ebebeb;
 }
 
-// <svg>
-#site-logo {
-/*   @include breakpoint(600px) {
-    width: 200%;
-    height: 200%;
-  } */
-
-  /* @include breakpoint($tablet) {
-    width: 20.8475px;
-    height: 47.2715px;
-  } */
+.slash {
+  stroke: #ee5f81;
 }
-
-#monogram {
-  // display: none;
-  fill: #ececec;
-
-  @include breakpoint($tablet) {
-    // display: block;
-  }
-}
-
-#slash {
-
-}
-
-// <svg>
-/* #mark-monogram {
-  // display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0.833rem 0.833rem 0.833rem 0;
-
-  fill: #fafafa;
-}
-
-#mark-slash {
-  position: absolute;
-  top: 0;
-  left: 0.382rem;
-  padding: 0.618rem;
-} */
