--- a/source/sass/templates/_info-information.scss
+++ b/source/sass/templates/_info-information.scss
@@ -23,6 +23,10 @@
   .block--information .mark {
     position: relative;
     display: block;
+
+    height: 5.2523888889rem;
+    width: 2.3163888889rem;
+
     margin: 0 auto 2.618rem;
     padding-right: 0.833rem;
   }
