--- a/source/sass/quarks/_cl-effect.scss
+++ b/source/sass/quarks/_cl-effect.scss
@@ -38,19 +38,12 @@
   }
 }
 
-/* .cl-effect-12 a::after {
-  width: 32px;
-  height: 32px;
-  border-width: 1px;
-  -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
-  -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
-  transform: translateX(-50%) translateY(-50%) scale(0.8);
-} */
-
 .cl-effect-12 a:hover::before,
 .cl-effect-12 a:hover::after,
 .cl-effect-12 a:focus::before,
-.cl-effect-12 a:focus::after {
+.cl-effect-12 a:focus::after,
+.cl-effect-12 a:active::before,
+.cl-effect-12 a:active::after {
   opacity: 1;
   -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
   -moz-transform: translateX(-50%) translateY(-50%) scale(1);
@@ -58,7 +51,7 @@
 }
 
 // Ring Colors
-.cl-effect-12 .icon {
+.icon {
   &--phone {
     &::before,
     &::after {
