--- a/source/_includes/page-footer.html
+++ b/source/_includes/page-footer.html
@@ -1,11 +1,31 @@
 <footer class="block block--footer">
   <div class="column">
   	<ul class="social">
-  		<li><a href="tel:+85263051181" class="icon--phone"><svg class="icon"><use xlink:href="#icon--phone"/></svg></a></li>
-  		<li><a href="https://twitter.com/mj12albert" target="_blank" class="icon--twitter"><svg class="icon"><use xlink:href="#icon--twitter"/></svg></a></li>
-  		<li><a href="http://instagram.com/mj12albert" target="_blank" class="icon--instagram"><svg class="icon"><use xlink:href="#icon--instagram"/></svg></a></li>
-  		<li><a href="http://tumblr.albertyu.co/" target="_blank" class="icon--tumblr"><svg class="icon"><use xlink:href="#icon--tumblr"/></svg></a></li>
-  		<li><a href="mailto:albert@albertyu.co" class="icon--email"><svg class="icon"><use xlink:href="#icon--email"/></svg></a></li>
+  		<li>
+        <a href="tel:+85263051181" class="icon--phone">
+          <svg class="icon"><use xlink:href="#icon--phone"/></svg>
+        </a>
+      </li>
+  		<li>
+        <a href="https://twitter.com/mj12albert" target="_blank" class="icon--twitter">
+          <svg class="icon"><use xlink:href="#icon--twitter"/></svg>
+        </a>
+      </li>
+  		<li>
+        <a href="http://instagram.com/mj12albert" target="_blank" class="icon--instagram">
+          <svg class="icon"><use xlink:href="#icon--instagram"/></svg>
+        </a>
+      </li>
+  		<li>
+        <a href="http://tumblr.albertyu.co/" target="_blank" class="icon--tumblr">
+          <svg class="icon"><use xlink:href="#icon--tumblr"/></svg>
+        </a>
+      </li>
+  		<li>
+        <a href="mailto:albert@albertyu.co" class="icon--email">
+          <svg class="icon"><use xlink:href="#icon--email"/></svg>
+        </a>
+      </li>
   	</ul>
 		<small class="legal">&copy; 2014 Albert Yu</small>
   </div>
