--- a/source/sass/organisms/_social.scss
+++ b/source/sass/organisms/_social.scss
@@ -46,8 +46,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 45px;
-    height: 45px;
+    width: 2.5rem;
+    height: 2.5rem;
     border-width: 1px;
     border-style: solid;
     border-radius: 50%;
@@ -61,8 +61,8 @@
     transform: translateX(-50%) translateY(-50%) scale(0.2);
 
     @include breakpoint(25em) {
-      width: 32px;
-      height: 32px;
+      width: 1.9rem;
+      height: 1.9rem;
     }
   }
 
