- Added contact info as a toggle-able overlay

--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -48,6 +48,7 @@
   @import "organisms/project-ekpac";
   @import "organisms/project-juniorchefacademy-white";
   @import "organisms/social";
+  @import "organisms/overlay-contact";
 
 // QUARKS
   // @import "quarks/cl-effect";
