--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -16,11 +16,15 @@
     function loadJS(a){"use strict";var b=window.document.getElementsByTagName("script")[0],c=window.document.createElement("script");return c.src=a,b.parentNode.insertBefore(c,b),c}
     <!--build:remove -->
     loadJS("js/picturefill.js");
+    loadJS("js/modernizr.custom.js");
     loadJS("js/vendor/domReady.js");
     loadJS("js/vendor/vhBuggyfill.js");
     loadJS("js/vendor/fastclick.js");
+    loadJS("js/classie.js");
+    loadJS("js/demo7.js");
     loadJS("js/vendor/smoothScroll.js");
     <!--/build -->
+    // loadJS("js/features/overlay.js");
     loadJS("js/main.js");</script>
 
 <!-- PICTUREFILL -->
@@ -34,6 +38,8 @@
 
 <!-- CLOUD.TYPOGRAPHY 1.1.0 -->
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/761324/css/fonts.css" />
+
+  <link rel="stylesheet" href="css/manifest.css">
 </head>
 
 <body>
