Tweaked and refactored JS - Overlay and smoothScroll are IIFEs - Overlay toggle works with multiple triggers across the DOM

--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -20,11 +20,11 @@
     loadJS("js/vendor/domReady.js");
     loadJS("js/vendor/vhBuggyfill.js");
     loadJS("js/vendor/fastclick.js");
-    loadJS("js/classie.js");
-    loadJS("js/demo7.js");
-    loadJS("js/vendor/smoothScroll.js");
+    loadJS("js/vendor/classie.js");
+    loadJS("js/helpers.js");
     <!--/build -->
-    // loadJS("js/features/overlay.js");
+    loadJS("js/features/smoothScroll.js");
+    loadJS("js/features/overlay.js");
     loadJS("js/main.js");</script>
 
 <!-- PICTUREFILL -->
