- Tweaked zoom effect on container div when toggling overlay - Added CSS classes for hooking on light/dark styles when toggling   overlay from different triggers

--- a/source/_includes/overlay-contact.html
+++ b/source/_includes/overlay-contact.html
@@ -1,4 +1,4 @@
-<div class="overlay overlay-contentscale">
+<div class="overlay zoom">
   <button type="button" class="overlay-close">Close</button>
 
   <div class="contact">
