--- a/source/_includes/page-header.html
+++ b/source/_includes/page-header.html
@@ -9,7 +9,7 @@
         <li><a data-scroll href="#projects">Projects</a></li>
         <li><a data-scroll href="#information"><span class="xs">Info</span><span class="md">Information</span></a></li>
         <li><a href="http://journal.albertyu.co" id="disabled">Journal</a></li>
-        <li><a href="#contact" class="trigger-overlay">Contact</a></li>
+        <li><a href="#contact" class="trigger-overlay top">Contact</a></li>
       </ul>
     </nav>
   </header>
