--- a/source/_includes/section-contact.html
+++ b/source/_includes/section-contact.html
@@ -3,6 +3,6 @@
   <section class="column">
     <h2 class="block__title--contact">Currently available for new projects, or collaborations with other designers, programmers, artists, or engineers. I love diving into new challenges and meeting new friends.</h2>
 
-    <a href="#" class="button trigger-overlay" role="button"><span class="button__arrow"></span>Get In Touch</a>
+    <a href="#" class="button trigger-overlay bottom" role="button"><span class="button__arrow"></span>Get In Touch</a>
   </section>
 </div>
