--- a/source/_includes/overlay-contact.html
+++ b/source/_includes/overlay-contact.html
@@ -4,25 +4,23 @@
   <div class="contact">
     <ul>
       <li class="contact-item">
-        <a href="#">
+        <a href="mailto:albert@albertyu.co" class="contact-link">
           <span class="contact-link__title">Mail</span>
           <span class="contact-link__subtitle">albert@albertyu.co</span>
         </a>
       </li>
       <li class="contact-item">
-        <a href="#">
+        <a href="tel:+85263051181" class="contact-link">
           <span class="contact-link__title">Call</span>
           <span class="contact-link__subtitle">+852 63051181</span>
         </a>
       </li>
       <li class="contact-item">
-        <a href="#">
+        <a href="https://twitter.com/mj12albert" class="contact-link">
           <span class="contact-link__title">Follow</span>
           <span class="contact-link__subtitle">@mj12albert</span>
         </a>
       </li>
-      <!-- <li class="contact-item"><a href="#"><span>Call</span><span>+852 63051181</span></a></li> -->
-      <!-- <li class="contact-item"><a href="#">Follow</a></li> -->
     </ul>
   </div>
 </div>
