- Styled overlay with light and dark color schemes - Tweaked animations/transitions for the overlay toggle effect

--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -16,7 +16,7 @@
     function loadJS(a){"use strict";var b=window.document.getElementsByTagName("script")[0],c=window.document.createElement("script");return c.src=a,b.parentNode.insertBefore(c,b),c}
     <!--build:remove -->
     loadJS("js/picturefill.js");
-    loadJS("js/modernizr.custom.js");
+    loadJS("js/modernizr.custom.60996.js");
     loadJS("js/vendor/domReady.js");
     loadJS("js/vendor/vhBuggyfill.js");
     loadJS("js/vendor/fastclick.js");
