--- a/source/_includes/section-information.html
+++ b/source/_includes/section-information.html
@@ -1,8 +1,7 @@
 <a id="information"></a>
 <div class="block block--info block--information">
   <article class="column">
-    <!-- {% include svg/mark.min.svg %} -->
-    <svg class="mark"><use xlink:href="#logo"/></svg>
+    <svg class="mark"><use xlink:href="#icon--logo"/></svg>
 
     <h2 class="block__title--information">I’m a designer and developer dedicated to building meaningful experiences that distill clarity from complexity, marry form to function, and connect ideas to people.</h2>
 
