--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -49,6 +49,7 @@
   @import "organisms/project-juniorchefacademy-white";
   @import "organisms/social";
   @import "organisms/overlay-contact";
+  @import "organisms/overlay-contact-colors";
 
 // QUARKS
   // @import "quarks/cl-effect";
