--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -10,22 +10,27 @@
   <meta name="description" content="Albert Yu is a freelance designer and developer in Hong Kong.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- SYNCHRONOUS MODERNIZR -->
+  <!--build:js js/modernizr.js -->
+  <!--/build-->
+
 <!-- ASYNCHRONOUSLY LOAD CSS+JS -->
   <script>function loadCSS(e,t,n){"use strict";var i=window.document.createElement("link");var o=t||window.document.getElementsByTagName("script")[0];i.rel="stylesheet";i.href=e;i.media="only x";o.parentNode.insertBefore(i,o);setTimeout(function(){i.media=n||"all"})}
     loadCSS("css/manifest.css");
     function loadJS(a){"use strict";var b=window.document.getElementsByTagName("script")[0],c=window.document.createElement("script");return c.src=a,b.parentNode.insertBefore(c,b),c}
     <!--build:remove -->
     loadJS("js/picturefill.js");
-    loadJS("js/modernizr.custom.60996.js");
+    loadJS("js/vendor/modernizr.custom.60996.js");
     loadJS("js/vendor/domReady.js");
     loadJS("js/vendor/vhBuggyfill.js");
     loadJS("js/vendor/fastclick.js");
     loadJS("js/vendor/classie.js");
     loadJS("js/helpers.js");
-    <!--/build -->
     loadJS("js/features/smoothScroll.js");
-    loadJS("js/features/overlay.js");
-    loadJS("js/main.js");</script>
+    // loadJS("js/features/overlay.js");
+    <!--/build -->
+    loadJS("js/main.js");
+    loadJS("js/overlay.js");</script>
 
 <!-- PICTUREFILL -->
   <script>document.createElement("picture");</script>
