--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -26,7 +26,7 @@
     loadJS("js/vendor/fastclick.js");
     loadJS("js/vendor/classie.js");
     loadJS("js/helpers.js");
-    loadJS("js/features/smoothScroll.js");
+    loadJS("js/smoothScroll.js");
     // loadJS("js/features/overlay.js");
     <!--/build -->
     loadJS("js/main.js");
@@ -35,7 +35,6 @@
 <!-- PICTUREFILL -->
   <script>document.createElement("picture");</script>
   <!--build:js js/picturefill.min.js -->
-  <!-- <script src="js/picturefill.js" async></script> -->
   <!--/build-->
 
 <!-- TYPEKIT -->
