--- a/source/_includes/projects/harmonyhome.html
+++ b/source/_includes/projects/harmonyhome.html
@@ -1,4 +1,4 @@
-<div class="block block--project harmonyhome">
+<div class="block block--project harmonyhome" id="projecthh">
   <div class="project__header"></div>
   <article class="column">
     <h2 class="project__title">Home Psychological Services</h2>
