--- a/source/_includes/projects/juniorchefacademy.html
+++ b/source/_includes/projects/juniorchefacademy.html
@@ -6,6 +6,7 @@
     <aside class="project__info">
       <span class="project__year">2013</span>
       <ul class="project__services">
+        <li>Art Direction</li>
         <li>Identity</li>
         <li>Web Design</li>
         <li>Code</li>
@@ -15,7 +16,7 @@
     <div class="project__description">
       <p class="detail">Junior Chef Academy offers a one-of-a-kind extra-curricular learning experience for kids and teenagers, which happens to be a particularly crowded space in Hong Kong. Founder Judy Li subverts the typical recipe-based approach to cooking classes, instead teaching basic kitchen skills and simple preparations with a focus on nutritional, wholesome eating, giving her students a headstart on building healthy eating habits and self-sufficiency in the kitchen. This project was a joy to work on! The visual identity design struck a great balance between the playfulness of the class experience and the seriousness of underlying teachings. Print collateral and a landing page was created to promote their inaugural series of summer classes.</p>
 
-      <p class="credits">Additional Graphic Design: Bronson Fung <span class="slash">&nbsp;/&nbsp;</span> Production: Progressive Press</p>
+      <p class="credits">Graphic Design: Bronson Fung <span class="slash">&nbsp;/&nbsp;</span> Production: Progressive Press</p>
     </div>
 
     <figure class="project__figure">
