- Added an overlay to reject IE8 and below with an IE conditional

--- a/source/sass/scaffolding/_base.scss
+++ b/source/sass/scaffolding/_base.scss
@@ -45,6 +45,12 @@ body {
   }
 }
 
+// <div class="container" role="main">
+[role="main"] {
+  position: relative;
+  z-index: 90;
+}
+
 // <div>
 .block {
   width: 100%;
