- Slimmed down markup and css for IE rejection <div>

--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -50,7 +50,7 @@
   @import "organisms/social";
   @import "organisms/overlay-contact";
   @import "organisms/overlay-contact-colors";
-  @import "organisms/overlay-browser-rejection";
+  // @import "organisms/overlay-browser-rejection";
 
 // QUARKS
   // @import "quarks/cl-effect";
