--- a/source/_includes/browserRejection.html
+++ b/source/_includes/browserRejection.html
@@ -1,11 +1,9 @@
-<!--[if lte IE 7]>
-	<div class="browser-rejection-overlay">
-		<div class="xFull">
-			<div class="the-error">
-				<div class="bigtext">Oh dear.</div>
-				<div class="description">
-					<p>The browser you are using is out-of-date. You should upgrade to a newer version of Internet Explorer, or better yet, go <a href="http://outdatedbrowser.com">here</a> and choose one of these <span class="neon neon-1">free</span>, <span class="neon neon-2">modern</span> browsers for a <span class="neon neon-3">fast</span>, <span class="neon neon-4">secure</span>, <span class="neon neon-5">comfortable</span>, and <span class="neon neon-6">awesome</span> web-experience!</p>
-				</div>
+<!--[if lte IE 8]>
+	<div class="browser-rejection">
+		<div class="maxwidth">
+			<div class="browser-rejection-error">
+				<div class="browser-rejection-error__bigtext">Oh dear.</div>
+				<p class="browser-rejection-error__description">The browser you are using is out-of-date. You should upgrade to a newer version of Internet Explorer, or better yet, go <a href="http://outdatedbrowser.com">here</a> and choose one of these <span class="neon neon-1">free</span>, <span class="neon neon-2">modern</span> browsers for a <span class="neon neon-3">fast</span>, <span class="neon neon-4">secure</span>, <span class="neon neon-5">comfortable</span>, and <span class="neon neon-6">awesome</span> web-experience!</p>
 			</div>
 		</div>
 	</div>
