--- a/source/sass/scaffolding/_rejected.scss
+++ b/source/sass/scaffolding/_rejected.scss
@@ -5,32 +5,11 @@
 //       PROJECT: albertyu.co                                                  /
 //        CLIENT: Albert Yu                                                    /
 //   DELIVERABLE: Website Prototype                                            /
-//         CLASS: Utility                                                      /
-//         TITLE: Font Definitions (Calluna)                                   /
+//         CLASS: Scaffolding                                                  /
+//         TITLE:                                                              /
 //                                                                             /
 //=============================================================================/
 
-// Calluna
-%callunaLight {
-  font-family: "calluna", Georgia, Times, "Times New Roman", serif;
-  font-style: normal;
-  font-weight: 300;
-}
-
-%callunaRegular {
-  font-family: "calluna", Georgia, Times, "Times New Roman", serif;
-  font-style: normal;
-  font-weight: 400;
-}
-
-%callunaItalic {
-  font-family: "calluna", Georgia, Times, "Times New Roman", serif;
-  font-style: italic;
-  font-weight: 400;
-}
-
-%callunaBold {
-  font-family: "calluna", Georgia, Times, "Times New Roman", serif;
-  font-style: normal;
-  font-weight: 700;
+.container {
+  display: none !important;
 }
