Very basic page-load effect
- Fade in above-the-fold content, main <div> faux-slides into viewport
- Manually inlined loading state styles in <head>

--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Albert Yu is a freelance designer and developer in Hong Kong.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>.loading{opacity:0;}</style>
+  <style>.loading .block,.loading .main-title,.loading [role=navigation]{opacity:0}.hero{background:#fdfdfd}.block{-moz-transform:translateY(10vh);-ms-transform:translateY(10vh);-webkit-transform:translateY(10vh);transform:translateY(10vh)}</style>
 
   <!-- smoosh -->
     <!--build:js js/dist/enhance.min.js -->
