--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -36,6 +36,7 @@
   @import "molecules/site-logo";
   @import "molecules/button-link";
   @import "molecules/navigation";
+  @import "molecules/loading";
 
 // ORGANISMS
   @import "organisms/main-title";
