--- a/source/sass/organisms/_overlay-contact.scss
+++ b/source/sass/organisms/_overlay-contact.scss
@@ -180,6 +180,7 @@
 
 .zoom.open {
   visibility: visible;
+  z-index: 95;
   // -webkit-transform: translateY(0%);
   // transform: translateY(0%);
   @include translateY(0);
